# bdk-electrum-streaming-poc

./: .gitignore  Cargo.toml  JOURNAL.md  README.md
src/: lib.rs  main.rs  persistence.rs  polling.rs  streaming.rs
src/polling/: baseline.rs  mod.rs
src/streaming/: client.rs  engine.rs  mod.rs  req.rs  types.rs
src/streaming/domain/: mod.rs  spk_tracker.rs
src/streaming/electrum/: api.rs  async_client.rs  blocking_client.rs  cached_polling_client.rs  driver.rs  mock_client.rs  mod.rs  tests.rs
src/streaming/electrum/async_client/: client.rs  minimal_test.rs  mod.rs  tests.rs  types.rs
src/streaming/electrum/asynchronous/: adapter.rs  mod.rs  tests.rs
src/streaming/electrum/blocking/: client.rs
src/streaming/electrum/mock/: client.rs
src/streaming/electrum/tests/: integration.rs
src/streaming/engine/: logic.rs  mod.rs  state.rs  tests.rs  types.rs
src/streaming/jobs/: chain_job.rs  mod.rs  spk_job.rs  spk_tracker.rs
src/streaming/runtime/: driver.rs  mod.rs  orchestrator.rs  tests.rs
