[package]
name = "bdk-electrum-streaming-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# BDK dependencies
bdk_wallet = { version = "2.3", features = ["file_store"] }
bdk_electrum = "0.23"

# Other dependencies
bitcoin = "0.32.2"
bytes = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
tokio-rustls = "0.25"
tokio-native-tls = "0.3"
native-tls = "0.2"
rustls = "0.23"
webpki-roots= "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"